# ai-media-watch-afm-hackathon

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-ml.txt  requirements.txt
docs/: API_CONTRACTS.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  IDEA.md  IDEA.ru.md  IMPLEMENTATION_PLAN.md  ML_MODEL_CONTRACT.md  NEXT_STEPS.md  PERFORMANCE.md
docs/superpowers/plans/: 2026-06-24-scamshield-backend.md
docs/superpowers/specs/: 2026-06-24-scamshield-design.md
frontend/: config.js  index.html  manifest.json
mobile/: README.md  app.json  package-lock.json  package.json
mobile/src/api/: client.ts  types.ts
mobile/src/app/: _layout.tsx  history.tsx  index.tsx  login.tsx  register.tsx  settings.tsx
mobile/src/auth/: auth-context.tsx
mobile/src/components/: job-row.tsx  score-ring.tsx  screen.tsx  ui.tsx
mobile/src/constants/: config.ts  risk.ts  theme.ts
mobile/src/hooks/: use-color-scheme.web.ts
mobile/src/storage/: auth.ts  jobs.ts  settings.ts
mobile/src/types/: assets.d.ts
mobile/src/utils/: platform.ts
scripts/: ab_semantic.py  run-demo.sh  simple_ui.py
src/aimw/: __init__.py  config.py  logging_config.py  main.py
src/aimw/api/: __init__.py  deps.py  errors.py
src/aimw/db/: __init__.py  base.py  models.py  repositories.py
src/aimw/domain/: __init__.py  enums.py  models.py  schemas.py
src/aimw/orchestration/: __init__.py  container.py  orchestrator.py
src/aimw/scripts/: __init__.py  init_db.py  run_local.py
src/aimw/services/: __init__.py  downloader.py  frame.py  fusion.py  ingestion.py  interfaces.py  reporting.py  scene.py  (+2 more)
tests/: conftest.py
tests/integration/: test_analyze_flow.py  test_check_endpoint.py
tests/unit/: test_disabled_providers.py  test_downloader.py  test_frames.py  test_fusion.py  test_json_repair.py  test_judge_cascade.py  test_ocr_batching.py  test_scam_model.py  test_semantic.py  test_skip_judge.py  test_text_risk.py  test_timeline.py  test_visual_gating.py
(+45 files in other folders)
