[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-media-watch"
version = "0.1.0"
description = "Explainable multimodal video risk analysis platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "AI Media Watch" }]

dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    # Async / HTTP
    "httpx>=0.27",
    "yt-dlp>=2024.8",
    "tenacity>=8.4",
    # Workers / queue
    "celery>=5.4",
    "redis>=5.0",
    # Database
    "SQLAlchemy>=2.0.30",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    # Media processing
    "opencv-python-headless>=4.9",
    "scenedetect>=0.6.4",
    "numpy>=1.26",
    "Pillow>=10.0",
    # Logging
    "structlog>=24.1",
    "orjson>=3.10",
]

[project.optional-dependencies]
# Heavy ML providers. Install only on GPU/inference nodes.
ml = [
    "paddleocr>=2.7",
    "paddlepaddle>=2.6",
    "faster-whisper>=1.0",
    "torch>=2.2",
    "transformers>=4.41",
    "qwen-vl-utils>=0.0.8",
    "Pillow>=10.3",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-redis",
]

[project.scripts]
aimw-api = "aimw.main:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
